Headshot spacing fix in Broadcast bar

--- a/app/assets/stylesheets/modals.css.scss
+++ b/app/assets/stylesheets/modals.css.scss
@@ -137,7 +137,7 @@
 		left:18px;
 		top:14px;
 		.arrow-up { 
-			left: 349px;
+			left: 100px;
 		}
 	} // .episode-guide
 	
